Rewrite Phase 6: Language Polish